--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,3 +4,37 @@
     min-height: 100vh;
     background-color: lightslategray;
 }
+
+#header {
+    margin: 10px;
+}
+
+#user-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 30px;
+}
+
+#display-rest {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 30px;
+}
+
+.rest-card {
+    height: 400px;
+    width: 500px;
+    margin: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+}
+img {
+    height: 75%;
+    width: 75%;
+ 
+}
+.card-img {
+    object-fit: scale-down;
+}
