--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,17 +1,57 @@
 #home-container {
-    min-height: 100vh;
     background-color: #FFFAFF;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 #header {
-    margin: 10px;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100vw;
+    height: 75px;
+    background-color: #A4240B;
+    z-index: 1;
+}
+
+#title {
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    margin-left: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #user-input {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 30px;
+    width: 100%;
+    margin-bottom: -8px;
+}
+
+.input-box {
+    height: 30px;
+    width: 40%;
+    font-size: 20px;
+    border-radius: 20px;
+    border: none;
+    padding-left: 10px;
+    outline: none;
+}
+
+#find-button {
+    height: 35px;
+    width: 10%;
+    font-size: 20px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: #C4B0B9;
 }
 
 #display-rest {
@@ -19,7 +59,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin: 30px;
+    margin-top: 80px;
 }
 
 .rest-card {
@@ -36,18 +76,14 @@
     transform: scale(1.05);
 }
 
-img {
-    max-height: 100%;
-    max-width: 100%;
- 
-}
 a {
     text-decoration: none;
     color: black;
 }
 .card-img {
     object-fit: contain;
-    border-radius: 150px;
+    min-height: 100%;
+    min-width: 100%;
 }
 #img-box {
     display: flex;
@@ -56,6 +92,7 @@ a {
     justify-content: center;
     width: 300px;
     height: 300px;
+    overflow: hidden;
 }
 
 #pagebtngroup {
@@ -66,9 +103,14 @@ a {
 }
 
 #loading {
-    margin-top: 150px;
+    margin-top: 40vh;
 }
 
 #nextbtn, #prevbtn {
     margin: 0 30px;
+}
+
+#search-text {
+    margin-top: 40vh;
+    color: lightgray;
 }
