--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -35,7 +35,7 @@
 #lan-btn:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-h1 {
+#site-title {
   font-family: 'Oswald', sans-serif;
   font-size: 50px;
   margin: -10px 0 -10px 0;
