--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -52,6 +52,11 @@
     border: none;
     outline: none;
     background-color: #C4B0B9;
+    margin-right: 10px;
+}
+
+#find-button:hover {
+    cursor: pointer;
 }
 
 #display-rest {
@@ -66,8 +71,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 400px;
-    width: 500px;
+    height: 60vh;
+    width: 60vw;
     margin: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
@@ -108,6 +113,14 @@ a {
 
 #nextbtn, #prevbtn {
     margin: 0 30px;
+}
+
+#nextbtn:hover {
+    cursor: pointer;
+}
+
+#prevbtn:hover {
+    cursor: pointer;
 }
 
 #search-text {
