--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -15,6 +15,7 @@
     height: 75px;
     background-color: #A4240B;
     z-index: 1;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.3), 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
 
 #title {
@@ -101,6 +102,7 @@ a {
 }
 
 #pagebtngroup {
+    padding-top: 50px;
     padding-bottom: 90px;
     display: flex;
     flex-direction: row;
@@ -108,11 +110,15 @@ a {
 }
 
 #loading {
-    margin-top: 40vh;
+    margin-top: 35vh;
 }
 
 #nextbtn, #prevbtn {
     margin: 0 30px;
+    width: 75px;
+    height: 30px;
+    background-color: #C4B0B9;;
+    border: none;
 }
 
 #nextbtn:hover {
