--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -72,8 +72,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 60vh;
-    width: 60vw;
+    height: 65vh;
+    width: 40vw;
     margin: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
@@ -86,6 +86,12 @@ a {
     text-decoration: none;
     color: black;
 }
+
+#rest-title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+}
+
 .card-img {
     object-fit: contain;
     min-height: 100%;
