--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -90,6 +90,8 @@ a {
 #rest-title {
     font-family: 'Oswald', sans-serif;
     font-size: 30px;
+    margin-bottom: 0;
+    margin-top: 40px;
 }
 
 .card-img {
@@ -102,9 +104,10 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    height: 300px;
+    width: 70%;
+    height: 70%;
     overflow: hidden;
+    padding: 20px;
 }
 
 #pagebtngroup {
