--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -142,3 +142,53 @@ a {
     margin-top: 40vh;
     color: lightgray;
 }
+
+@media only screen and (max-width: 600px) {
+    #header {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    #title {
+        font-size: 25px;
+    }
+
+    .input-box {
+        height: 15px;
+        font-size: 10px;
+        border-radius: 10px;
+        padding-left: 5px;
+    }
+    
+    #find-button {
+        height: 17.5px;
+        width: 7%;
+        font-size: 10px;
+        border-radius: 5px;
+        margin-right: 0;
+    }
+
+    #user-input {
+        margin-bottom: 0;
+    }
+
+    .rest-card {
+        height: 65vh;
+        width: 75vw;
+        margin: 15px;
+    }
+
+    #rest-title {
+        font-size: 20px;
+        margin-bottom: 0;
+        margin-top: 20px;
+    }
+
+    #nextbtn, #prevbtn {
+        width: 60px;
+        height: 20px;
+        font-size: 10px;
+    }
+
+}
