--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -55,6 +55,7 @@ hr {
     align-items: center;
     margin: 0;
     height: 100vh;
+    background-image: url("../images/food-small.png")
   }
 
   #lan-content-box {
@@ -65,6 +66,7 @@ hr {
     width: 90vw;
     height: 60vh;
     margin: 0;
+    padding: 0 10px 0 10px;
     text-align: center;
   }
 
