--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -148,11 +148,11 @@ a {
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-        height: 85px;
+        height: 120px;
     }
 
     #title {
-        font-size: 25px;
+        display: none;
     }
 
     .input-box {
@@ -160,18 +160,28 @@ a {
         font-size: 18px;
         border-radius: 10px;
         padding-left: 5px;
+        margin: 5px;
+        width: 90%
     }
     
     #find-button {
         height: 27px;
-        width: 9%;
+        width: 18%;
         font-size: 18px;
         border-radius: 5px;
-        margin-right: 0;
+        margin-top: 5px;
     }
 
     #user-input {
+        margin-top: 5px;
         margin-bottom: 10px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    #display-rest {
+        margin-top: 125px;
     }
 
     .rest-card {
@@ -187,9 +197,9 @@ a {
     }
 
     #nextbtn, #prevbtn {
-        width: 60px;
-        height: 20px;
-        font-size: 10px;
+        width: 18%;
+        height: 30px;
+        font-size: 18px;
     }
 
     #pagebtngroup {
