--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -149,6 +149,7 @@ a {
         align-items: center;
         justify-content: space-evenly;
         height: 120px;
+        padding: 5px;
     }
 
     #title {
@@ -159,7 +160,6 @@ a {
         height: 25px;
         font-size: 18px;
         border-radius: 10px;
-        padding-left: 5px;
         margin: 5px;
         width: 90%
     }
@@ -167,7 +167,7 @@ a {
     #find-button {
         height: 27px;
         width: 18%;
-        font-size: 18px;
+        font-size: 99%;
         border-radius: 5px;
         margin-top: 5px;
     }
@@ -181,7 +181,7 @@ a {
     }
 
     #display-rest {
-        margin-top: 125px;
+        margin-top: 130px;
     }
 
     .rest-card {
@@ -197,9 +197,9 @@ a {
     }
 
     #nextbtn, #prevbtn {
-        width: 18%;
+        width: 22%;
         height: 30px;
-        font-size: 18px;
+        font-size: 90%;
     }
 
     #pagebtngroup {
