--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -161,7 +161,8 @@ a {
         font-size: 18px;
         border-radius: 10px;
         margin: 5px;
-        width: 90%
+        width: 90%;
+        margin-right: 12px;
     }
     
     #find-button {
@@ -170,6 +171,7 @@ a {
         font-size: 99%;
         border-radius: 5px;
         margin-top: 5px;
+        margin-right: 0;
     }
 
     #user-input {
